--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,12 +6,21 @@ env:
 
 phases:
     install:
-        runtime-versions:
-            nodejs: 14
         commands:
-            -echo Installing source NPM dependencies...
-            -npm install
-            -npm install -g @angular/cli
+            - echo installing nodejs...
+            - curl -sL https://deb.nodesource.com/setup_12.x | bash -
+            - apt-get install -y nodejs
+            - echo installing yarn...
+            - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
+            - echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
+            - apt install --no-install-recommends yarn
+            - echo Installing source NPM dependencies...
+
+    pre_build:
+        commands:
+            - echo installing dependencies...
+            - npm i -g @angular/cli
+            - npm install
 
     build:
         commands:
