--- a/buildspec.yml
+++ b/buildspec.yml
@@ -29,5 +29,5 @@ phases:
 artifacts:
     files:
         - '**/*'
-    base-directory: 'dist*'
+    base-directory: 'dist/hello-world'
     discard-paths: yes
