--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,7 +2,9 @@ version: 0.2
 env:
     variables:
         S3_BUCKET: "{{s3_bucket_url}}"
-        BUILD_FOLDER: "dist"
+
+APP_NAME: "<APP_NAME_HERE>"
+BUILD_ENV : "prod"
 
 phases:
     install:
@@ -25,9 +27,20 @@ phases:
     build:
         commands:
             - echo Build started
-            - ng build
+            - ng build --${BUILD_ENV}
+
+    post_build:
+        commands:
+        # Clear S3 bucket.
+        - aws s3 rm s3://${S3_BUCKET} --recursive
+        - echo S3 bucket is cleared.
+        # Copy dist folder to S3 bucket, As of Angular 6, builds are stored inside an app folder in distribution and not at the root of the dist folder
+        - aws s3 cp dist s3://${S3_BUCKET}/${APP_NAME} --recursive
+        - echo Build completed on `date`
+
+
 artifacts:
     files:
         - '**/*'
-    base-directory: 'dist/hello-world*'
+    base-directory: 'dist*'
     discard-paths: yes
