--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ env:
     variables:
         S3_BUCKET: "{{s3_bucket_url}}"
 
-APP_NAME: "<APP_NAME_HERE>"
+APP_NAME: "Hello World"
 BUILD_ENV : "prod"
 
 phases:
@@ -31,9 +31,6 @@ phases:
 
     post_build:
         commands:
-        # Clear S3 bucket.
-        - aws s3 rm s3://${S3_BUCKET} --recursive
-        - echo S3 bucket is cleared.
         # Copy dist folder to S3 bucket, As of Angular 6, builds are stored inside an app folder in distribution and not at the root of the dist folder
         - aws s3 cp dist s3://${S3_BUCKET}/${APP_NAME} --recursive
         - echo Build completed on `date`
