Add necessary files

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,10 +1,11 @@
 version: 0.2
 env:
     variables:
+        CACHE_CONTROL: "86400"
         S3_BUCKET: "{{s3_bucket_url}}"
+        BUILD_FOLDER: "dist"
 
 APP_NAME: "Hello World"
-BUILD_ENV : "prod"
 
 phases:
     install:
@@ -27,14 +28,7 @@ phases:
     build:
         commands:
             - echo Build started
-            - ng build --${BUILD_ENV}
-
-    post_build:
-        commands:
-        # Copy dist folder to S3 bucket, As of Angular 6, builds are stored inside an app folder in distribution and not at the root of the dist folder
-        - aws s3 cp dist s3://${S3_BUCKET}/${APP_NAME} --recursive
-        - echo Build completed on `date`
-
+            - ng build 
 
 artifacts:
     files:
