--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,15 +9,8 @@ APP_NAME: "Hello World"
 
 phases:
     install:
-        commands:
-            - echo installing nodejs...
-            - curl -sL https://deb.nodesource.com/setup_12.x | bash -
-            - apt-get install -y nodejs
-            - echo installing yarn...
-            - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
-            - echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
-            - apt install --no-install-recommends yarn
-            - echo Installing source NPM dependencies...
+        runtime-versions:
+        nodejs: 14
 
     pre_build:
         commands:
@@ -29,6 +22,11 @@ phases:
         commands:
             - echo Build started
             - ng build 
+
+    post_build:
+        commands:
+        - aws s3 cp dist s3://${S3_BUCKET} --recursive
+        - echo Build completed on `date`
 
 artifacts:
     files:
