--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,7 +20,7 @@ phases:
 
     post_build:
         commands:
-        - aws s3 cp dist s3://arn:aws:s3:::helloworld-server/ --recursive
+        - aws s3 cp dist s3://${S3_BUCKET}/ --recursive
         - echo Build completed on `date`
 
 artifacts:
